update fix wording

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: "Hoshizora Chi"
 SEOTitle: Hoshizora Chi Blog
 header-img: img/AyakaCompressed.png
 email: ciii1@proton.me
-description: "Spreading the beauty of messages from around the world"
+description: "Spreading beautiful messages from around the world"
 keyword: "hoshizora chi, chi, @ciii1, translation, japanese"
 url: "https://hoshizora-chi.github.io" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
